2005-11-27  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by hyatt.  Committed by eseidel.

        Test cases for http://bugzilla.opendarwin.org/show_bug.cgi?id=5172

        * fast/text/international/bidi-layout-across-linebreak-expected.checksum: Added.
        * fast/text/international/bidi-layout-across-linebreak-expected.png: Added.
        * fast/text/international/bidi-layout-across-linebreak-expected.txt: Added.
        * fast/text/international/bidi-layout-across-linebreak.html: Added.

2005-11-26  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by darin.  Committed by eseidel.

        Test cases for http://bugzilla.opendarwin.org/show_bug.cgi?id=5548

        * fast/encoding/charset-unicode-expected.txt: Added.
        * fast/encoding/charset-unicode.html: Added.
        * fast/encoding/charset-utf16-expected.txt: Added.
        * fast/encoding/charset-utf16.html: Added.
        * fast/encoding/xml-charset-utf16-expected.txt: Added.
        * fast/encoding/xml-charset-utf16.html: Added.

2005-11-26  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by ggaren.  Committed by eseidel.

        Fix for http://bugzilla.opendarwin.org/show_bug.cgi?id=5710
        item(i) should return the same result as [i]

        * fast/js/array-special-accessors-should-ignore-items-expected.txt: Added.
        * fast/js/array-special-accessors-should-ignore-items.html: Added.

2005-11-26  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by mjs.

        Test cases for http://bugzilla.opendarwin.org/show_bug.cgi?id=5230

        * fast/dom/character-index-for-point-expected.txt: Added.
        * fast/dom/character-index-for-point.html: Added.

2005-11-26  Mitz Pettel  <opendarwin.org@mitzpettel.com>

        Reviewed by darin, committed by eseidel.

        <col> <colgroup> tests from mitz.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5822

        * fast/table/colgroup-preceded-by-caption-expected.checksum: Added.