@@ -1,0 +1,16 @@
+layer at (0,0) size 800x600
+  RenderCanvas at (0,0) size 800x600
+layer at (0,0) size 800x110
+  RenderBlock {HTML} at (0,0) size 800x110
+    RenderBody {BODY} at (8,8) size 784x86
+      RenderBlock (anonymous) at (0,0) size 784x18
+        RenderText {TEXT} at (0,0) size 279x18
+          text run at (0,0) width 279: "The following two lines should be the same:"
+      RenderBlock {P} at (0,34) size 784x18
+        RenderText {TEXT} at (0,0) size 72x18
+          text run at (0,0) width 72: "abc\x{5D2}\x{5D1}\x{5D0}\x{661}\x{662}\x{663}"
+      RenderBlock {P} at (0,68) size 784x18
+        RenderText {TEXT} at (0,0) size 72x18
+          text run at (0,0) width 22: "abc"
+          text run at (22,0) width 26: "\x{5D0}\x{5D1}\x{5D2}"
+          text run at (48,0) width 24: "\x{661}\x{662}\x{663}"
