@@ -1,0 +1,15 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
+"http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+    <title>AN after L</title>
+<style type="text/css">
+    .lro { direction:ltr; unicode-bidi:bidi-override; };
+</style>
+</head>
+<body>
+The following two lines should be the same:
+<p class="lro">abc&#x05d2;&#x05d1;&#x05d0;&#x0661;&#x0662;&#x0663;</p>
+<p>abc&#x0661;&#x0662;&#x0663;&#x05d0;&#x05d1;&#x05d2;</p>
+</body>
+</html>
