@@ -1178,6 +1178,9 @@ void RenderBlock::bidiReorderLine(const BidiIterator& start, const BidiIterator&
             dirCurrent = QChar::DirAN;
             switch (bidi.status.last) {
                 case QChar::DirL:
+                    if (bidi.context->dir == QChar::DirL)
+                        appendRun(bidi);
+                    break;
                 case QChar::DirAN:
                     break;
                 case QChar::DirR:
