@@ -1,5 +1,15 @@
 2005-11-27  Mitz Pettel  <opendarwin.org@mitzpettel.com>
 
+        Reviewed by Darin. Committed by Maciej.
+
+	- test case for Bidi algorithm: AN after L has incorrect resolved level
+	(http://bugzilla.opendarwin.org/show_bug.cgi?id=5573)
+
+        * fast/text/international/bidi-AN-after-L-expected.txt: Added.
+        * fast/text/international/bidi-AN-after-L.html: Added.
+
+2005-11-27  Mitz Pettel  <opendarwin.org@mitzpettel.com>
+
         Reviewed by hyatt.  Committed by eseidel.
 
         Test cases for http://bugzilla.opendarwin.org/show_bug.cgi?id=5172
